--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
    <application
-        android:label="start_up_workspace"
+        android:label="App Name"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
