--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,22 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   get: ^4.6.6
-  shared_preferences: ^2.3.0
+  shared_preferences: ^2.3.2
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
-  share_plus: ^10.0.0
+  share_plus: ^10.0.2
   loading_plus: ^2.0.2
   awesome_notifications: ^0.9.3+1
-  firebase_messaging: ^15.0.4
-  package_info_plus: ^8.0.1
-  internet_connection_checker: ^1.0.0+1
+  firebase_messaging: ^15.1.0
+  package_info_plus: ^8.0.2
+  internet_connection_checker: ^2.0.0
   upgrader: ^10.3.0
   in_app_review: ^2.0.9
   encrypt: ^5.0.3
   flutter_svg: ^2.0.10+1
   url_launcher: ^6.3.0
-  firebase_crashlytics: ^4.0.4
-  firebase_analytics: ^11.2.1
+  firebase_crashlytics: ^4.1.0
+  firebase_analytics: ^11.3.0
   #  rive: ^0.13.3
   #  cached_network_image: ^3.3.1
   #  transparent_image: ^2.0.1
@@ -42,6 +42,9 @@ dependencies:
   #  image_picker: ^1.0.7
   #  geolocator: ^11.0.0
   #  shimmer: ^3.0.0
+
+dependency_overrides:
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
