--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,5 +2,13 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-    avoid_print: true
+#    avoid_print: true
+#    prefer_single_quotes: true
     prefer_single_quotes: true
+    always_specify_types: false
+    avoid_classes_with_only_static_members: true
+    avoid_empty_else: true
+    prefer_mixin: true
+    use_rethrow_when_possible: true
+    prefer_final_locals: true
+    prefer_final_in_for_each: true
