--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,8 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
-#    avoid_print: true
-#    prefer_single_quotes: true
+#    flutter_style_todos: true
     prefer_single_quotes: true
     always_specify_types: false
     avoid_classes_with_only_static_members: true
@@ -12,3 +11,6 @@ linter:
     use_rethrow_when_possible: true
     prefer_final_locals: true
     prefer_final_in_for_each: true
+    always_use_package_imports: true
+    cancel_subscriptions: true
+    use_enums: true
