--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.start_up_workspace">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="App Name"
+        android:label="OCR"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
