--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,24 +16,24 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  intl: ^0.19.0
+  intl: ^0.20.0
   get: ^4.6.6
-  shared_preferences: ^2.3.2
+  shared_preferences: ^2.3.3
   http: ^1.2.2
-  flutter_dotenv: ^5.1.0
-  share_plus: ^10.0.2
+  flutter_dotenv: ^5.2.1
+  share_plus: ^10.1.2
   loading_plus: ^2.0.2
-  awesome_notifications: ^0.9.3+1
-  firebase_messaging: ^15.1.0
-  package_info_plus: ^8.0.2
-  internet_connection_checker: ^2.0.0
-  upgrader: ^10.3.0
-  in_app_review: ^2.0.9
+  firebase_messaging: ^15.1.5
+  package_info_plus: ^8.1.1
+  internet_connection_checker: ^1.0.0+1
+  upgrader: ^11.3.0
+  in_app_review: ^2.0.10
   encrypt: ^5.0.3
-  flutter_svg: ^2.0.10+1
-  url_launcher: ^6.3.0
-  firebase_crashlytics: ^4.1.0
-  firebase_analytics: ^11.3.0
+  flutter_svg: ^2.0.14
+  url_launcher: ^6.3.1
+  firebase_crashlytics: ^4.1.5
+  firebase_analytics: ^11.3.5
+  flutter_local_notifications: ^18.0.1
   #  rive: ^0.13.3
   #  cached_network_image: ^3.3.1
   #  transparent_image: ^2.0.1
@@ -44,17 +44,18 @@ dependencies:
   #  shimmer: ^3.0.0
 
 dependency_overrides:
-  web: ^1.0.0
+  intl: 0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.4.1
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.3
   import_sorter: ^4.6.0
   rename: ^3.0.2
-  ########## import_sorter ##########
+
+########## import_sorter ##########
 import_sorter:
   emojis: false
   comments: false
@@ -65,9 +66,9 @@ import_sorter:
 ########## rename ##########
 #  dart pub global activate rename
 #  rename getAppName --targets ios,android,macos,windows,linux
-#  rename setAppName --targets ios,android,macos,windows,linux --value "App Name"
+#  rename setAppName --targets ios,android,macos,windows,linux --value "OCR"
 #  rename getBundleId --targets ios,android,macos,windows,linux
-#  rename setBundleId --targets ios,android,macos,windows,linux --value "com.example.startUpWorkspace"
+#  rename setBundleId --targets ios,android,macos,windows,linux --value "com.assaf.ocr"
 
 ########## rename ##########
 
@@ -97,18 +98,19 @@ flutter_launcher_icons:
 ########## flutter_native_splash ##########
 flutter_native_splash:
   color: "#ffffff"
-  #background_image: "assets/background.png"
-  image: assets/icons/app_icon.png
-  #branding: assets/dart.png
+  icon_background_color: "#ffffff"
+  # background_image: "assets/background.png"
+  # image: assets/icons/app_icon.png
+  # branding: assets/dart.png
   # bottom, bottomRight, bottomLeft
-  #branding_mode: bottom
-  #color_dark: "#042a49"
-  #background_image_dark: "assets/dark-background.png"
-  #image_dark: assets/splash-invert.png
-  #branding_dark: assets/dart_dark.png
+  # branding_mode: bottom
+  # color_dark: "#042a49"
+  # background_image_dark: "assets/dark-background.png"
+  # image_dark: assets/splash-invert.png
+  # branding_dark: assets/dart_dark.png
   android_12:
     color: "#ffffff"
-    image: assets/icons/app_icon.png
+  # image: assets/icons/app_icon.png
   # dart run flutter_native_splash:create
   # dart run flutter_native_splash:remove
 ########## flutter_native_splash ##########
