--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    ext {
+        agp_version = '7.4.0'
+        agp_version1 = '7.4.0'
+        agp_version2 = '7.4.0'
+    }
+}
 allprojects {
     repositories {
         google()
